--- a/packages/zoe/package.json
+++ b/packages/zoe/package.json
@@ -74,23 +74,14 @@
   ],
   "ava-xs": {
     "exclude": [
-      "# eek! SIGSEGV in GC https://github.com/Moddable-OpenSource/moddable/issues/592",
-      "test-loan-e2e.js",
-      "# another SEGV, but not in --debug so I cannot get a stack trace",
-      "contracts/test-callSpread-calculation",
-      "# another SEGV; not investigated",
+      "# F test/unitTests/contracts/loan/test-borrow.js borrow, then addCollateral, then getLiquidationPromise",
+      "# amount value: 100, expected value: 101, message",
       "loan/test-borrow.js",
-      "test-fakePriceAuthority.js",
-      "test-offerSafety",
-      "test-scriptedOracle",
-      "test-zoeHelpers",
-      "# multiple instances of automaticRefund for the same Zoe bad plan: 6 still to go",
-      "test-automaticRefund",
-      "test-secondPriceAuction.js",
-      "test-escrowToVote",
-      "test-coveredCall",
-      "# offerOk threw: \"instance\" not found: (an object)'",
-      "test-otcDesk.js",
+      "# intermittent SEGV?",
+      "fakePriceAuthority",
+      "# F test/unitTests/contracts/test-automaticRefund.js multiple instances of automaticRefund for the same Zoe",
+      "# bad plan: 6 still to go",
+      "contracts/test-automaticRefund.js",
       "# We use WORKER_TYPE=xs ava to run these...",
       "swingsetTests"
     ]
